# dap-observer

./: Cargo.toml  README.md
crates/dap-client/src/: model.rs
crates/dap-client/src/dap/: transport.rs  types.rs
crates/dap-repl/: Cargo.toml  README.md
crates/dap-repl/src/: main.rs  repl.rs
crates/dap-script/: Cargo.toml  README.md
crates/dap-script/examples/: README.md  start-session.sh
crates/dap-script/examples/go/: go.mod  launch.daps  probe-locals.daps  sieve.go  step-and-observe.daps  walk-to-prime.daps
crates/dap-script/examples/python/: launch.daps  probe-locals.daps  serialize.daps  sieve.py  step-and-observe.daps  walk-to-prime.daps  where.daps
crates/dap-script/examples/rust/: .gitignore  build.sh  launch.daps  probe-locals.daps  sieve.rs  step-and-observe.daps  walk-to-prime.daps  where.daps
crates/dap-script/src/: ast.rs  dump.rs  interpreter.rs  main.rs  parser.rs  session.rs  value.rs
crates/dap-tui/src/: view.rs
src/: headless.rs  main.rs  model.rs  ui.rs
src/dap/: mod.rs  transport.rs  types.rs
