[workspace]
resolver = "2"
members = ["crates/dap-client", "crates/dap-script", "crates/dap-tui"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "sync",
    "macros",
    "io-util",
    "io-std",
    "time",
    "signal",
] }
